cabal-version:   1.24
name:            notebook
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Pasqualino Titto Assini
maintainer:      tittoassini@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
-- extra-source-files:

library
  exposed-modules:  Notebook

  -- other-modules:
  -- other-extensions:
  build-depends:
      base
    , base64-bytestring
    , bytestring
    , bytestring-encoding
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , JuicyPixels
    , pandoc
    , pandoc-types
    , svg-builder
    , text
    , yahoo-prices

  hs-source-dirs:   src
  default-language: Haskell2010
